# UTopia

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  Trophy.md
helper/: git.py  (+10 more)
lib/: CMakeLists.txt
lib/analysis/: CMakeLists.txt  ParamNumberAnalysisReport.cpp  ParamNumberAnalyzer.cpp  TypeAnalysisReport.cpp  TypeAnalyzer.cpp
lib/apiloader/: APIExportsNDepsJsonLoader.cpp  APIJsonLoader.cpp  CMakeLists.txt
lib/astirmap/: ASTDefNode.cpp  ASTNode.cpp  CMakeLists.txt  CalledFunctionMacroMapper.cpp  DebugInfoMap.cpp  IRNode.cpp  LocIndex.cpp
lib/constantanalysis/: ASTValue.cpp  CMakeLists.txt  ConstAnalyzer.cpp  ConstAnalyzerReport.cpp
lib/dfanalysis/: CMakeLists.txt
lib/generation/: CMakeLists.txt  CorpusGenerator.cpp  FuzzGenReporter.cpp  FuzzInput.cpp  FuzzStatus.cpp  Fuzzer.cpp  FuzzerSrcGenerator.cpp  GenLoader.cpp  Generator.cpp  InputMutator.cpp  ProtobufDescriptor.cpp  ProtobufMutator.cpp  SrcGenerator.cpp  UTModify.cpp
lib/indcallsolver/: CMakeLists.txt  CustomCVPPass.cpp  GlobalInitializerSolver.cpp  GlobalInitializerSolverHandler.cpp  IndCallSolverImpl.cpp  IndCallSolverMgr.cpp  LLVMWalker.cpp  TBAASimpleSolver.cpp  TBAASimpleSolverHandler.cpp  TBAAVirtSolver.cpp  TBAAVirtSolverHandler.cpp  TestTypeVirtSolver.cpp  TestTypeVirtSolverHandler.cpp
lib/inputanalysis/: CMakeLists.txt  DefAnalyzer.cpp  DefMapGenerator.cpp  Definition.cpp  InputAnalysisReport.cpp  InputAnalyzer.cpp
lib/inputfilter/: ArrayGroupFilter.cpp  CMakeLists.txt  CompileConstantFilter.cpp  ConstIntArrayLenFilter.cpp  ExternalFilter.cpp  GroupFilter.cpp  InaccessibleGlobalFilter.cpp  InputFilter.cpp  InvalidLocationFilter.cpp  NullPointerFilter.cpp  RawStringFilter.cpp  TypeUnavailableFilter.cpp  UnsupportTypeFilter.cpp
lib/propanalysis/: AllocAnalysisReport.cpp  AllocAnalyzer.cpp  AllocSizeAnalysisReport.cpp  AllocSizeAnalyzer.cpp  ArgFlow.cpp  ArgFlowAnalyzer.cpp  ArrayAnalysisReport.cpp  ArrayAnalyzer.cpp  CMakeLists.txt  DirectionAnalysisReport.cpp  DirectionAnalyzer.cpp  FieldInfo.cpp  FilePathAnalysisReport.cpp  FilePathAnalyzer.cpp  LoopAnalysisReport.cpp  LoopAnalyzer.cpp  PropAnalysisCommon.cpp  StackFrame.cpp  StructInfo.cpp
lib/rootdefanalysis/: CMakeLists.txt  RDAnalyzer.cpp  RDBasicTypes.cpp  RDCache.cpp  RDExtension.cpp  RDNode.cpp  RDSpace.cpp  RDTarget.cpp
lib/sourceanalysis/: CMakeLists.txt  SourceAnalysisReport.cpp  SourceAnalyzerImpl.cpp
lib/sourceloader/: BuildDB.cpp  BuildDBLoader.cpp  CMakeLists.txt  CompileDB.cpp  ProjectEntry.cpp  SourceCollection.cpp
lib/target_analysis/: CMakeLists.txt  FunctionReport.cpp  ParamReport.cpp  TargetLib.cpp  TargetLibAnalyzer.cpp  TargetLibExportUtil.cpp  TargetLibLoadUtil.cpp
lib/target_analysis/targetpb/: CMakeLists.txt  targetpb.proto
lib/tcanalysis/: APICall.cpp  BoostCallWriter.cpp  BoostExtractor.cpp  CMakeLists.txt  FunctionNode.cpp  GoogleTestCallWriter.cpp  GoogleTestExtractor.cpp  NamedDeclCallback.cpp  TCAnalyzerFactory.cpp  TCExtractor.cpp  TCTCallWriter.cpp  TCTExtractor.cpp  UTInfo.cpp  Unittest.cpp
lib/type/: CMakeLists.txt  GlobalDef.cpp  Type.cpp
lib/utanalysis/: CMakeLists.txt  Location.cpp  TargetAPIFinder.cpp  UTAnalyzer.cpp  UTLoader.cpp
lib/utils/: ASTUtil.cpp  BuildDBParser.cpp  CMakeLists.txt  FileUtil.cpp  IRUtil.cpp  Location.cpp  ManualAllocLoader.cpp  PublicAPI.cpp  StringUtil.cpp
lib/utils/json/: jsoncpp.cpp
tests/: CMakeLists.txt  GtestMain.cpp  TestASTUtils.cpp  TestHelper.cpp  TestHelper.h
tests/analysis/: TestTypeAnalysisReport.cpp  TestTypeAnalyzer.cpp
tests/apiloader/: TestAPILoader.cpp
tests/astirmap/: TestDebugInfoMap.cpp  TestIRNode.cpp  TestLocIndex.cpp  TestMacroMapper.cpp  TestMatchers.cpp
tests/astvalue/: TestASTValue.cpp
tests/constantanalysis/: TestConstAnalyzer.cpp  TestConstAnalyzerReport.cpp
tests/constantanalysis/approved/: TestConstAnalyzerReport.TestConstantAnalyerReport.SerializeP.txt
tests/generation/: TestFTG.cpp  TestFuzzInput.cpp  TestFuzzStatus.cpp  TestProtobufDescriptor.cpp  TestProtobufMutator.cpp  TestUTModify.cpp
tests/generation/approved/: TestFTG.TestIntegration.cppCopyFromP.FuzzArgsProfile.proto  TestFTG.TestIntegration.cppCopyFromP.fuzz_entry.cc  TestFTG.TestIntegration.cppCopyFromP.ut.cpp  TestFTG.TestIntegration.cppEnumP.FuzzArgsProfile.proto  TestFTG.TestIntegration.cppEnumP.fuzz_entry.cc  TestFTG.TestIntegration.cppEnumP.ut.cpp  TestFTG.VerifyGeneratedP.utc_defined_type_p.FuzzArgsProfile.proto  TestFTG.VerifyGeneratedP.utc_defined_type_p.fuzz_entry.cc  (+35 more)
tests/indcallsolver/: TestIndCallSolver.cpp
tests/inputanalysis/: TestDefAnalyzer.cpp  TestDefMapGenerator.cpp  TestInputAnalysisBase.hpp  TestInputAnalysisReport.cpp
tests/inputfilter/: TestInputFilter.cpp
tests/propanalysis/: TestAllocAnalyzer.cpp  TestAllocSizeAnalysisReport.cpp  TestAllocSizeAnalyzer.cpp  TestArrayAnalysisReport.cpp  TestArrayAnalyzer.cpp  TestDirectionAnalysisReport.cpp  TestDirectionAnalyzer.cpp  TestFilePathAnalysisReport.cpp  TestFilePathAnalyzer.cpp  TestLoopAnalyzer.cpp  TestPropAnalyzer.hpp
tests/rootdefanalysis/: TestClass.cpp  TestField.cpp  TestRDSpace.cpp  TestRootDef.cpp
tests/sourceanalysis/: TestSourceAnalyzerImpl.cpp
tests/sourceloader/: TestBuildDB.cpp  TestBuildDBLoader.cpp  TestCompileDB.cpp  TestProjectEntry.cpp
tests/struct/: TestStruct.cpp
tests/targetanalysis/: TestTargetLib.cpp
tests/tcanalysis/: TestBoostCallWriter.cpp  TestBoostExtractor.cpp  TestGoogleTestCallWriter.cpp  TestGoogletestExtractor.cpp  TestTCAnalyzerFactory.cpp  TestTCTCallWriter.cpp  TestTCTExtractor.cpp
tests/testutil/: APIManualLoader.cpp  APIManualLoader.h  CompileHelper.cpp  CompileHelper.h  IRAccessHelper.cpp  IRAccessHelper.h  SourceFileManager.cpp  SourceFileManager.h  TestUtil.cpp  TestUtil.h
tests/type/: TestArrayInfo.cpp  TestGlobalDef.cpp  TestType.cpp
tests/utanalysis/: TestTargetAPIFinder.cpp
tests/utils/: TestAssignUtil.cpp  TestFileUtil.cpp  TestLLVMUtil.cpp  TestStringUtil.cpp
tools/fuzz_generator/: CMakeLists.txt  main.cpp
tools/target_analyzer/: CMakeLists.txt  main.cpp
tools/ut_analyzer/: CMakeLists.txt  main.cpp
(+179 files in other folders)
