add_subdirectory(target_analysis)
add_subdirectory(utanalysis)
add_subdirectory(generation)
add_subdirectory(utils)
add_subdirectory(indcallsolver)
add_subdirectory(type)
add_subdirectory(apiloader)
add_subdirectory(sourceloader)
add_subdirectory(constantanalysis)
add_subdirectory(inputanalysis)
add_subdirectory(inputfilter)
add_subdirectory(propanalysis)
add_subdirectory(astirmap)
add_subdirectory(tcanalysis)
add_subdirectory(rootdefanalysis)
add_subdirectory(analysis)
add_subdirectory(sourceanalysis)
