add_library(ftgICallSolver
	GlobalInitializerSolver.cpp
	GlobalInitializerSolverHandler.cpp
	IndCallSolverMgr.cpp
	CustomCVPPass.cpp
	LLVMWalker.cpp
	TBAASimpleSolver.cpp
	TBAASimpleSolverHandler.cpp
	TBAAVirtSolver.cpp
	TBAAVirtSolverHandler.cpp
	TestTypeVirtSolver.cpp
	TestTypeVirtSolverHandler.cpp
)
