include_directories(
  ${CMAKE_SOURCE_DIR}/include/ftg/propanalysis
)

add_library(ftgPropAnalysis
  ArgFlow.cpp
  ArgFlowAnalyzer.cpp
  AllocSizeAnalyzer.cpp
  AllocSizeAnalysisReport.cpp
  DirectionAnalyzer.cpp
  DirectionAnalysisReport.cpp
  ArrayAnalyzer.cpp
  ArrayAnalysisReport.cpp
  FilePathAnalysisReport.cpp
  FilePathAnalyzer.cpp
  LoopAnalysisReport.cpp
  LoopAnalyzer.cpp
  PropAnalysisCommon.cpp
  StackFrame.cpp
)
